--- a/final-project/pom.xml
+++ b/final-project/pom.xml
@@ -15,6 +15,12 @@
         <selenium.version>4.27.0</selenium.version>
         <slf4j.version>2.0.12</slf4j.version>
         <logback.version>1.5.6</logback.version>
+        <lombok.version>1.18.40</lombok.version>
+        <testng.version>7.10.1</testng.version>
+        <allure.version>2.23.0</allure.version>
+        <jakson.version>2.17.3</jakson.version>
+
+
     </properties>
     <dependencies>
         <dependency>
@@ -34,5 +40,38 @@
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${testng.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>${allure.version}</version>
+        </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jakson.version}</version>
+            </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.11.0</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
+
+
+
+
 </project>
